# caucus-mcp

./: .gitignore  .mcp.example.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  caucus-protocol.md  pyproject.toml  release-please-config.json  smoke_test.py  warroom-protocol.md
.claude/: settings.json
.claude/hooks/: pr-version-reminder.sh
.github/: pull_request_template.md
.github/workflows/: changelog.yml  ci.yml  publish.yml  release.yml  tag-on-bump.yml
docs/: ARCHITECTURE.md  dashboard-protocol.md  operator-runbook.md
src/caucus/: __init__.py  automode.py  claude_agent.py  disklog.py  export.py  hub.py  hub_connector.py  logging_setup.py  mcp_bridge.py  models.py  ratelimit.py  state.py  urlguard.py  watch.py
src/caucus/ui/: index.html
src/caucus/ui/assets/: index-2N3m0eAy.js  index-BEIrR1WB.js  index-B_853xEc.css  index-BgsIygVp.css  index-ByHe537T.css  index-C6ssEd-g.js  index-C92rVHS2.js  index-C9cifFCP.js  index-CDaMHK6V.css  index-CFNwz1X9.css  index-CMtb1KBg.js  index-CZ9-WxD1.css  index-CapfwhYg.js  index-D0czwvIj.js  index-DbIrGY-Z.js  index-DcCF4Rhs.css  index-DiQlmW0Z.js  index-DvBHtXm5.css  index-Trzs3F0D.css  index-U_5w6nAz.js  index-jWHFJzsU.js  index-oOV8dc34.css
src/warroom/: __init__.py  hub.py  mcp_bridge.py  models.py  state.py
tests/: conftest.py  test_automode.py  test_bridge.py  test_claude_agent.py  test_dashboard_hub.py  test_dashboard_state.py  test_disklog.py  test_export.py  test_floor.py  test_hub_api.py  test_hub_browser.py  test_hub_connector.py  test_logging_setup.py  test_models.py  test_protocol_md.py  test_ratelimit.py  test_security.py  test_security_low.py  test_state.py  test_urlguard.py  test_version.py  test_watch.py
ui/: index.html
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
web/e2e/: dashboard.spec.ts  global-setup.ts  global-teardown.ts
web/src/: App.tsx  index.css
web/src/components/: ChannelsPanel.tsx  DisconnectedBanner.tsx  FloorStrip.tsx  FlowPanel.tsx  FormsAlert.tsx  FormsPanel.tsx  HealthPanel.tsx  OperatorComposer.tsx  RateControl.tsx  ToastProvider.tsx
web/src/components/__tests__/: FlowPanel.test.tsx  FormsPanel.test.tsx  HealthPanel.test.tsx  OperatorComposer.test.tsx  RateControl.test.tsx  autocomplete.test.ts
web/src/lib/: autocomplete.ts  colors.ts  utils.ts
web/src/lib/__tests__/: colors.test.ts
web/src/store/: types.ts  wsStore.ts
web/src/store/__tests__/: wsStore.perf.test.ts  wsStore.test.ts
web/src/test/: setup.ts
