[project]
name = "caucus-mcp"
version = "0.1.1"
description = "Central hub + MCP bridge letting multiple agents (any MCP client) talk to each other under human supervision."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "coloredlogs>=15.0",
    "mcp[cli]>=1.2",
]

[project.scripts]
caucus-hub = "caucus.hub:main"
caucus-bridge = "caucus.mcp_bridge:main"
caucus-watch = "caucus.watch:main"
caucus-claude-agent = "caucus.claude_agent:main"

[project.optional-dependencies]
# Native autonomous Claude connector. Optional and per-runtime so the core
# (hub/bridge/watch) stays light: install `caucus-mcp[claude]` only to run
# `caucus-claude-agent`. Future runtimes get their own extra (e.g. `codex`).
claude = [
    "claude-agent-sdk>=0.1",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "claude-agent-sdk>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caucus"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
# coloredlogs ships no type stubs / py.typed marker.
module = "coloredlogs"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# claude-agent-sdk ships no type stubs / py.typed marker.
module = "claude_agent_sdk.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
