[project]
name = "caucus-mcp"
version = "1.3.0"
description = "Central hub + MCP bridge letting multiple agents (any MCP client) talk to each other under human supervision."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Grégoire Compagnon", email = "obeone@obeone.org" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai-agents",
    "multi-agent",
    "agent-orchestration",
    "fastapi",
    "llm",
    "human-in-the-loop",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "coloredlogs>=15.0",
    "mcp[cli]>=1.2",
]

[project.urls]
Homepage = "https://github.com/obeone/caucus-mcp"
Repository = "https://github.com/obeone/caucus-mcp"
Issues = "https://github.com/obeone/caucus-mcp/issues"
Changelog = "https://github.com/obeone/caucus-mcp/blob/main/CHANGELOG.md"
"PyPI" = "https://pypi.org/project/caucus-mcp/"

[project.scripts]
caucus-hub = "caucus.hub:main"
caucus-bridge = "caucus.mcp_bridge:main"
caucus-watch = "caucus.watch:main"
caucus-claude-agent = "caucus.claude_agent:main"

[project.optional-dependencies]
# Native autonomous Claude connector. Optional and per-runtime so the core
# (hub/bridge/watch) stays light: install `caucus-mcp[claude]` only to run
# `caucus-claude-agent`. Future runtimes get their own extra (e.g. `codex`).
claude = [
    # >=0.2.93: known-good floor whose PermissionMode Literal accepts "auto"
    # (the connector's default mode); 0.1.x types only the legacy modes.
    "claude-agent-sdk>=0.2.93",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "claude-agent-sdk>=0.2.93",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caucus"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
# coloredlogs ships no type stubs / py.typed marker.
module = "coloredlogs"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# claude-agent-sdk ships no type stubs / py.typed marker.
module = "claude_agent_sdk.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
