[project]
name = "caucus-mcp"
# The version is derived from the latest git tag by hatch-vcs at build time —
# never hardcoded here. See `[tool.hatch.version]` below and the Versioning
# section in CLAUDE.md. Tag `vX.Y.Z` to release `X.Y.Z`.
dynamic = ["version"]
description = "Central hub + MCP bridge letting multiple agents (any MCP client) talk to each other under human supervision."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Grégoire Compagnon", email = "obeone@obeone.org" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai-agents",
    "multi-agent",
    "agent-orchestration",
    "fastapi",
    "llm",
    "human-in-the-loop",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "coloredlogs>=15.0",
    "mcp[cli]>=1.2",
]

[project.urls]
Homepage = "https://github.com/obeone/caucus-mcp"
Repository = "https://github.com/obeone/caucus-mcp"
Issues = "https://github.com/obeone/caucus-mcp/issues"
Changelog = "https://github.com/obeone/caucus-mcp/blob/main/CHANGELOG.md"
"PyPI" = "https://pypi.org/project/caucus-mcp/"

[project.scripts]
caucus-hub = "caucus.hub:main"
caucus-bridge = "caucus.mcp_bridge:main"
caucus-watch = "caucus.watch:main"
caucus-claude-agent = "caucus.claude_agent:main"

[project.optional-dependencies]
# Native autonomous Claude connector. Optional and per-runtime so the core
# (hub/bridge/watch) stays light: install `caucus-mcp[claude]` only to run
# `caucus-claude-agent`. Future runtimes get their own extra (e.g. `codex`).
claude = [
    # >=0.2.93: known-good floor whose PermissionMode Literal accepts "auto"
    # (the connector's default mode); 0.1.x types only the legacy modes.
    "claude-agent-sdk>=0.2.93",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "claude-agent-sdk>=0.2.93",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Derive the package version from git tags (via setuptools-scm under the hood).
# A build sitting exactly on tag `v1.4.0` is version `1.4.0`; commits past the
# tag get a dev version like `1.4.1.dev3+g<sha>`. Release = create a GitHub
# Release / git tag `vX.Y.Z`, nothing to edit in this file.
[tool.hatch.version]
source = "vcs"

# Write the resolved version into a generated module at build time so the
# installed package (and editable installs) can read it back without importing
# hatch-vcs at runtime. This file is git-ignored — it is a build artifact.
[tool.hatch.build.hooks.vcs]
version-file = "src/caucus/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/caucus"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
# coloredlogs ships no type stubs / py.typed marker.
module = "coloredlogs"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# claude-agent-sdk ships no type stubs / py.typed marker.
module = "claude_agent_sdk.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
